--- a/spring-boot-ajax-crud/src/main/resources/application.properties
+++ b/spring-boot-ajax-crud/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8082
 spring.datasource.url = jdbc:mysql://localhost:3306/employeeapp
-spring.datasource.username = taison_db
+spring.datasource.username = taisondb
 spring.datasource.password = Jipartek20@
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
